Library Sign in Project
many features still not included, but it works

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /HangmanGUI/build/
 /HangmanCoded/nbproject/private/
 /HangmanCoded/build/
+/Library Sign In/nbproject/private/
+/Library Sign In/build/
