--- a/Library Sign In/nbproject/project.properties
+++ b/Library Sign In/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Library Sign In
+application.vendor=Justin
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,20 +27,26 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Library_Sign_In.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.jdatepicker-1.3.4.jar=lib/jdatepicker-1.3.4.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jdatepicker-1.3.4.jar}:\
+    ${libs.JCalendar.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${file.reference.jdatepicker-1.3.4.jar}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.jdatepicker-1.3.4.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -67,7 +74,8 @@ run.classpath=\
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+    ${build.test.classes.dir}:\
+    ${file.reference.jdatepicker-1.3.4.jar}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
