--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 /GameTest/build/
 /TextureMaker/nbproject/private/
 /TextureMaker/build/
+/Sudoku/nbproject/private/
+/Sudoku/build/
+/Some Project/nbproject/private/
+/Some Project/build/
