--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@
 /Sudoku/build/
 /Some Project/nbproject/private/
 /Some Project/build/
+/Connect 4/nbproject/private/
+/Connect 4/build/
+/Connect 4 Coded/nbproject/private/
+/Connect 4 Coded/build/
